@@ -1,3 +1,9 @@
+>> 26.09.2011
+[CO]
+- "Keyboard" & "VirtualStandardController": There was a confusing naming mix up between "Return" and "Enter", it's now always "Return" (in PixelLight, there's no difference between those two keys)
+
+
+
 >> 21.09.2011
 [CO]
 - Android port: Improved mouse emulation by using the touchscreen
